--- a/css/main.css
+++ b/css/main.css
@@ -57,8 +57,17 @@ h4 {
   color: #333;
 }
 
-.definition {
+.definition, .rules {
   opacity: 0.5;
+}
+
+.rules a {
+  text-decoration: none;
+  color: blue;
+}
+
+#rules-tooltip {
+  cursor: default;
 }
 
 .key-box p {
@@ -119,7 +128,7 @@ h4 {
   }
 
   .alert {
-    margin-top: 40%;
+    margin-top: 30%;
   }
 }
 
